main page overflow fix and slide height in firefox

--- a/packages/frontend/src/app/pages/MainPage/Blocks/Publications/swiper.css
+++ b/packages/frontend/src/app/pages/MainPage/Blocks/Publications/swiper.css
@@ -1,11 +1,8 @@
 .publications-slider {
   overflow: visible;
+}
 
-  .swiper-wrapper {
-    align-items: stretch;
-  }
-
-  .swiper-slide {
-    height: auto;
-  }
+.publications-slide {
+  align-self: stretch;
+  height: auto !important;
 }
